--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -33,7 +33,12 @@
         top: 0;
         left: -100%;
         z-index: -3;
+        transition: 0.3s;
     }
+        .nav-menu.active{
+            left:0;
+            top: center;
+        }
 
         .nav-menu li{
             padding: 1rem 0;
